--- a/index4.html
+++ b/index4.html
@@ -36,7 +36,7 @@
 
 <script>
 /* 你的 Cloudflare Tunnel 網域（每次變動就改這一行） */
-const TUNNEL_HOST = "latino-cowboy-victor-snowboard.trycloudflare.com";
+const TUNNEL_HOST = "https://alfred-newman-always-legislature.trycloudflare.com";
 
 let ws=null, audioCtx=null, worklet=null, stream=null, pingTimer=null;
 let playQueue=[], playing=false, joined=false;
